# gRParse

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.openvino  README.md  compose.yaml  docling_serve.proto  docling_serve_stream.proto  document.proto  parse.proto  parse_stream.proto  parse_types.proto
.github/workflows/: ci.yml  publish.yml
compat/: grparse_session_ep.h
compat/onnxruntime/core/session/: onnxruntime_cxx_api.h
docs/: ARCHITECTURE.md  EPICS.md
include/grparse/: barcode_decoder.h  base64.h  collector_coordinator.h  docling_map.h  document_assembly.h  document_merge.h  document_parser_service.h  figure_classifier.h  in_memory_document.h  layout_engine.h  ocr_engine.h  ocr_types.h  office_collector.h  page_scheduler.h  reading_order.h  region_geometry.h  resource_pool.h  table_structure.h  table_structure_engine.h  text_geometry.h
models/: README.md
patches/: rapidocr-session-ep.patch
scripts/: export_figure_classifier.py  parse_pdf.sh
src/: barcode_decoder.cpp  base64.cpp  collector_coordinator.cpp  docling_map.cpp  document_assembly.cpp  document_merge.cpp  document_parser_service.cpp  figure_classifier.cpp  in_memory_document.cpp  layout_engine.cpp  main.cpp  ocr_engine.cpp  office_collector.cpp  ort_session_ep.cpp  page_scheduler.cpp  reading_order.cpp  region_geometry.cpp  stream_pdf_client.cpp  table_structure.cpp  table_structure_engine.cpp  text_geometry.cpp
tests/: barcode_decoder_test.cpp  base64_test.cpp  collector_coordinator_test.cpp  document_assembly_test.cpp  document_merge_test.cpp  figure_classifier_test.cpp  layout_engine_test.cpp  lsan.supp  office_collector_test.cpp  page_scheduler_test.cpp  pdf_source_test.cpp  reading_order_test.cpp  resource_pool_test.cpp  streaming_service_test.cpp  table_structure_engine_test.cpp  table_structure_test.cpp  text_geometry_test.cpp
